--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "classcat": "^5.0.5",
+    "gsap": "^3.12.5",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
