--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,5 +3,9 @@
     "stylelint-config-standard",
     "stylelint-config-tailwindcss",
     "stylelint-config-clean-order"
-  ]
+  ],
+  "rules": {
+    "selector-class-pattern": null,
+    "keyframes-name-pattern": null
+  }
 }
