--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^2.6.0"
   },
