--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "gsap": "^3.12.5",
     "motion": "^11.15.0",
     "next": "15.1.3",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-wrap-balancer": "^1.1.1",
+    "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0",
     "valibot": "1.0.0-beta.10"
   },
